--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Cesium Starter App</title>
-  <script src="ThirdParty/Cesium/Cesium.js"></script>
-  <style>
-      @import url(ThirdParty/Cesium/Widgets/widgets.css);
-      html, body, #cesiumContainer {
-          width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
-      }
-  </style>
-</head>
-<body>
-  <div id="cesiumContainer"></div>
-  <script src="Source/App.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>cesium</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
+    <link rel="stylesheet" href="node_modules/cesium/Build/Cesium/Widgets/widgets.css">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div id="cesium" class="cesium"></div>
+    <script src="node_modules/cesium/Build/Cesium/Cesium.js"></script>
+    <script src="main.js"></script>
+  </body>
 </html>
