--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 		viewPointsArray[1]=new viewPoints("BlangEdit",4.633426,95.578812,0,-85,50000);
 		viewPointsArray[2]=new viewPoints("KetapangEdit",4.633426,95.578812,0,-85,50000);
 		viewPointsArray[3]=new viewPoints("Views from above",5.223058,95.737349,0,-85,180000);
-		viewPointsArray[4]=new viewPoints("First View", 35.689314,139.691783,0,-100,30000);
+		viewPointsArray[4]=new viewPoints("First View",4.633426,95.578812,0,-20,1000);
 		function kmlData(_label, _url) {
 			this.label = _label;
 			this.url = _url;
 		}
 		var kmlDataArray=[];
-			kmlDataArray[0]=new kmlData("Aceh",'kml/uta.kml');
+			kmlDataArray[0]=new kmlData("Aceh",'kml/florida.kml');
 		var osm;
 		var mobile = 0;
 		var viewPointChangeMenu = document.getElementById('slide_menu');
