--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			this.url = _url;
 		}
 		var kmlDataArray=[];
-			kmlDataArray[0]=new kmlData("Aceh",'kml/florida.kml');
+			kmlDataArray[0]=new kmlData("Aceh",'kml/uta.kml');
 		var osm;
 		var mobile = 0;
 		var viewPointChangeMenu = document.getElementById('slide_menu');
